# QGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  vcpkg.json
Editor/: QGameProfile-Runtime.json  imgui.ini
Editor/shaders/: FlatColor.glsl  Texture.glsl
Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt
Engine/src/: QGame.h  qgpch.h
Engine/src/QGame/: Appliccation.cpp  Appliccation.h  Core.h  EntryPoint.h  Input.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h  layer.cpp  layer.h  layerStack.cpp  layerStack.h
Engine/src/QGame/Core/: Application.cpp  Application.h  Appliccation.cpp  Appliccation.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
Engine/src/QGame/Events/: ApplicationEvent.h  AppliccationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/QGame/ImGui/: ImGuiBulid.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/QGame/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlShader.h
Engine/src/QGame/Platform/Windows/: WindowInput.cpp  WindowInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/src/QGame/Renderer/: Buffer.cpp  Buffer.h  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthgraphicCamera.cpp  OrthgraphicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/src/QGame/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Engine/src/QGame/Trace/: Instrument.h
Engine/vendor_src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
Engine/vendor_src/stb_image/: stb_image.cpp
Sandbox/: CMakeLists.txt  QGameProfile-Runtime.json  Sanbox2D.h  imgui.ini
Sandbox/shaders/: 1112.txy  Texture.glsl
Sandbox/src/: ParticleSystem.cpp  ParticleSystem.h  Sanbox2D.cpp  Sanbox2D.h  SanboxApp.cpp
